# skillex

./: .codex  .gitignore  .gitmodules  .lastagent  .project.json  AGENTS.md  GIT-CHECKPOINT-RUN.md  README.md  lefthook.yml  mise.toml  pyproject.toml  skillex.sh  tasks.md
.github/workflows/: ci.yml  publish.yml
.mise/scripts/: create-plane-project.sh  init-project.sh  link-agentfiles.sh  setup-plane.py  sync-claude-desktop-skills.sh
.opencode/: opencode.json
_bmad/: config.toml  config.user.toml
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skf-manifest.yaml  skill-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/bmp/: config.yaml  module-help.csv
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/skf/: config.yaml
all-skills/: .gitignore  33god-bloodbank-event-bus  33god-ecosystem  33god-project-jangler  33god-project-memory  animejs  css-animations  gsap  hyperframes  hyperframes-cli  hyperframes-media  hyperframes-registry  lottie  mcp-server-trello-release  mise.toml  remotion-to-hyperframes  skill-tree.md  skills.manifest.yaml  tailwind  three  toad  waapi  website-to-hyperframes
all-skills/33god/: SKILL.md  SKILL_TEMPLATE.md
all-skills/33god-projects/: .source.yaml  SKILL.md
all-skills/33god-task-triage/: SKILL.md
all-skills/agent-config-fanout/: .source.yaml  SKILL.md
all-skills/agent-factory/: SKILL.md
all-skills/agent-team-kit/: README.md  SKILL.md
all-skills/agent-token-efficiency/: README.md  SKILL.md  pyproject.toml
all-skills/agent-token-efficiency/assets/agents/claude/: docs-researcher.md  log-summarizer.md  scout.md
all-skills/agent-token-efficiency/assets/agents/codex/: docs-researcher.toml  reviewer.toml  scout.toml
all-skills/agent-token-efficiency/assets/agents/kimi/: jarad-scout.yaml
all-skills/agent-token-efficiency/assets/agents/kimi/prompts/: jarad-scout.md
all-skills/agent-token-efficiency/assets/configs/: providers.yml
all-skills/agent-token-efficiency/assets/mcp/: context7.json  semantic-code-search.placeholder.json
all-skills/agent-token-efficiency/assets/templates/: AGENTS.md  docs-researcher.prompt.md  log-summarizer.prompt.md  scout.prompt.md
all-skills/agent-token-efficiency/references/: provider-rotation.md  supported-agents.md  workflows.md
all-skills/agent-token-efficiency/scripts/: agent_efficiency.py
all-skills/agent-token-efficiency/tests/: test_agent_efficiency.py
all-skills/agent-workspace-linux/: .source.yaml
all-skills/agno/: SKILL.md
all-skills/artifact-template-client-profile-sheet/: .source.yaml  SKILL.md
all-skills/ascii-terminal-animation-pack/: SKILL.md
all-skills/async-pr-review/: SKILL.md
all-skills/behavioral-evals/: SKILL.md
all-skills/blog-writing/: SKILL.md
all-skills/bloodbank-integration/: SKILL.md
all-skills/bloodbank-sdk-generation/: .source.yaml  SKILL.md
all-skills/bmad-agent-git-archeologist/: SKILL.md
all-skills/bmad-html-workspace/: SKILL.md
all-skills/brule-method/: .source.yaml  SKILL.md
all-skills/bub-email-triage/: SKILL.md
all-skills/building-native-ui/: SKILL.md
all-skills/chrome-extension-developer/: SKILL.md
all-skills/chrome-extension-development/: .source.yaml  SKILL.md
all-skills/ci/: SKILL.md
all-skills/civilwar-letterifier/: .gitignore  LICENSE  README.md  SKILL.md  letter.json  package.json  t.txt
all-skills/clerk-android/: SKILL.md
all-skills/clerk-custom-ui/: SKILL.md
all-skills/clerk-swift/: SKILL.md
all-skills/clerk-webhooks/: SKILL.md
all-skills/cloudflare/: SKILL.md
all-skills/code-reviewer/: SKILL.md
all-skills/coding-strategy/: SKILL.md
all-skills/context-optimizer/: INSTALL.md  README.md  SKILL.md  SUMMARY.md
all-skills/context-self-heal/: SKILL.md
all-skills/creating-coloring-books/: SKILL.md  pyproject.toml
all-skills/creating-workflows-using-claude-flow/: README.md  SKILL.md
all-skills/delonet-conventions/: SKILL.md
all-skills/delonet-daily-report/: SKILL.md
all-skills/delonet-dotenv/: SKILL.md
all-skills/delonet-n8n-architecture/: SKILL.md
all-skills/delonet-workflow-router/: SKILL.md
all-skills/design-md/: README.md  SKILL.md
all-skills/digipop-coloring-book-creation/: SKILL.md
all-skills/docs-changelog/: SKILL.md
all-skills/docs-writer/: SKILL.md  quota-limit-style-guide.md
all-skills/domain-triage/: SKILL.md
all-skills/drumjangler-project-bmad/: SKILL.md
all-skills/echobox-pipeline/: SKILL.md
all-skills/elevenlabs-remotion/: SKILL.md  design-system.md
all-skills/elevenlabs-voices/: SKILL.md  examples.md  package.json
all-skills/enhance-prompt/: SKILL.md
all-skills/event-driven-architecture/: SKILL.md
all-skills/expo/: SKILL.md
all-skills/fal-text-to-image/: CHEATSHEET.md  README.md  SKILL.md  fal-image-edit  fal-image-remix
all-skills/feedback-vector-loop/: SKILL.md
all-skills/find-skills/: SKILL.md
all-skills/fireflies/: SKILL.md
all-skills/flstudio-scripting/: SKILL.md
all-skills/folder-curator/: SKILL.md
all-skills/follow-up-boss/: SKILL.md
all-skills/frontmatter-enrichment/: SKILL.md
all-skills/github-issue-creator/: SKILL.md
all-skills/god-docs/: SKILL.md
all-skills/google/: SKILL.md
all-skills/hermes-agent-fork-sync/: .source.yaml  SKILL.md
all-skills/hermes-pm-template-maintenance/: .source.yaml  SKILL.md
all-skills/high-end-visual-design/: SKILL.md
all-skills/hindsight/: SKILL.md
all-skills/hindsight-caf/: SKILL.md
all-skills/hindsight-maintenance/: .source.yaml  SKILL.md
bmad/: config.yaml
docs/: PRD.md  architecture-skillex-2026-01-13.md  bmm-workflow-status.yaml  sprint-plan-skillex-2026-01-13.md  sprint-status.yaml
forge-data/: analyze-source-report-skillex.md  analyze-source-result-latest.json  create-skill-result-latest.json
scripts/: bmad-implementation-loop.sh  skill-ssot-daemon.sh  skill_ssot.py
skill-sets/: hyperframes
tests/: __init__.py  conftest.py
(+1626 files in other folders)
