[project]
name = "skillex"
version = "0.1.0"
description = "CLI-agnostic skill package manager. One pack, identical capability delivery across every agentic CLI."
authors = [{ name = "Jarad DeLorenzo", email = "jaradd@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "typer>=0.15.0",
  "rich>=13.9.0",
  "pydantic>=2.10.0",
  "structlog>=24.4.0",
  "python-frontmatter>=1.1.0",
]

[project.scripts]
skillex = "skillex.cli:app"

[dependency-groups]
dev = ["pytest>=8.3.0", "pytest-cov>=6.0.0", "ruff>=0.8.0", "mypy>=1.14.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillex"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [
  "all-skills",
  "packs",
  "skill-sets",
  "test",
  ".mise",
  "scripts",
  "docs",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "RUF", # ruff-specific
]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N"]
"src/skillex/commands/**" = ["B008"] # Typer idiomatic default-arg calls
"src/skillex/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
files = ["src/skillex"]

[[tool.mypy.overrides]]
module = "frontmatter.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = ["integration: integration tests that touch filesystem fixtures"]
